--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,8 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
+{{> investorBubble }}
 
-
-        {{#each data.results}}
-        <li>{{this.last_name}}</li>;
-        {{/each}}
+    {{#each data.results}}
+    <li>{{this.last_name}}</li>
+    {{/each}}
