--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -3,6 +3,7 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/bower_components/d3/d3.js"></script>
   </head>
   <body>
     {{{body}}}
